fixing gap between cards

--- a/src/components/MovieInfo/MediaCardByGenre/style.module.css
+++ b/src/components/MovieInfo/MediaCardByGenre/style.module.css
@@ -1,6 +1,6 @@
 .card{
-    width: 300px;
-    height: 400px;
+    width: 280px;
+    height: 450px;
     border-radius: 15px;
     overflow: hidden;
     position: relative;
@@ -103,3 +103,15 @@
 .genres{
     font-size: 12px;
 }
+/*@media screen and (max-width: 1330px) {*/
+/*    .card{*/
+/*        width: 290px;*/
+/*        height: 430px;*/
+/*    }*/
+/*}*/
+/*@media screen and (max-width: 1260px) {*/
+/*    .card{*/
+/*        width: 270px;*/
+/*        height: 410px;*/
+/*    }*/
+/*}*/
